--- a/style.css
+++ b/style.css
@@ -1,31 +1,20 @@
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed, 
-figure, figcaption, footer, header, hgroup, 
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
-	margin: 0;
-	padding: 0;
-	border: 0;
-	font-size: 100%;
-	font: inherit;
+* {
+    margin: 0;
+    padding: 0;
+    border: 0;
+    font-size: 100%;
+    font: inherit;
     box-sizing: border-box;
-	vertical-align: baseline;}
+    vertical-align: baseline;
+}
 
 body {
-    /* width: 100vw; */
+    width: 1280px;
 }
 
 header {
-    /* background: url(/assets/Header\ Background2.png), lightgray 50% / auto no-repeat; */
-    /* width: 100vw; */
+    background: url(/assets/Header\ Background2.png), lightgray 50% / auto no-repeat;
+    width: 100vw;
     height: 459px;
     flex-shrink: 0;
     display: inline-flex;
@@ -93,14 +82,8 @@ main {
     justify-content: center;
 }
 
-.section-1 {
-    display: inline-flex;
-    justify-content: center;
-    align-items: center;
-    gap: 16px;
-}
 
-.section-2 {
+.section-1, .section-2, .section-3, .section-4 {
     display: flex;
     width: 100vw;
     height: 448px;
@@ -110,25 +93,6 @@ main {
     flex-shrink: 0;
 }
 
-.section-3 {
-    display: flex;
-    width: 100vw;
-    height: 448px;
-    justify-content: center;
-    align-items: center;
-    gap: 16px;
-    flex-shrink: 0;
-}
-
-.section-4 {
-    display: flex;
-    width: 100vw;
-    padding: 40px 0px;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    gap: 16px;
-}
 
 .section-4-text {
     width: 802px;
@@ -191,14 +155,14 @@ main section p {
 }
 
 footer {
-    /* display: flex;
+    display: flex;
     width: 100vw;
     height: 134px;
     padding: 35px 0px 36px 0px;
     justify-content: center;
     align-items: center;
     flex-shrink: 0;
-    background: #23272A; */
+    background: #23272A;
 }
 
 @media screen and (max-width: 428px) {
@@ -207,12 +171,13 @@ footer {
     }
 
     header {
-        /* background: url(/assets/Header\ Background.png), lightgray -711.152px 0px / 343.529% 100% no-repeat; */
+        background: url(/assets/Header\ Background.png), lightgray -711.152px 0px / 343.529% 100% no-repeat;
         height: 506px;
         flex-shrink: 0;
         display: flex;
         padding: 0px 24px;
-        align-items: flex-start;
+        align-items: center;
+        justify-content: center;
     }
 
     header h1 {
@@ -220,7 +185,7 @@ footer {
     }
 
     header p {
-        width: 330px;
+        width: 300px;
     }
 
     header nav {
@@ -228,52 +193,31 @@ footer {
     }
 
     nav .download {
-        width: 350px;
+        width: 300px;
         height: 54px;
     }
 
     nav .open {
 
-        width: 350px;
+        width: 300px;
         height: 52px;
     }
 
 
-    .section-1 {
+    .section-1, .section-2, .section-3, .section-4{
         display: flex;
         width: 100vw;
         padding: 40px 24px;
         flex-direction: column;
-        align-items: flex-start;
+        align-items: center;
+        justify-content: center;
         gap: 27px;
     }
 
-    .section-2 {
-        width: 100vw;
-        padding: 40px 24px;
-        flex-direction: column;
-        align-items: flex-start;
-        gap: 27px;
-    }
-
-    .section-3 {
-        width: 100vw;
-        padding: 40px 24px;
-        flex-direction: column;
-        align-items: flex-start;
-        gap: 27px;
-    }
-
-    .section-4 {
-        width: 100vw;
-        padding: 40px 24px;
-        align-items: flex-start;
-        gap: 27px;
-    }
 
     .section-4-text {
 
-        width: 378px;
+        width: 300px;
     }
 
     .image-4,
@@ -281,40 +225,30 @@ footer {
     .image-2,
     .image-1 {
         width: 300px;
-        height: 252px;
+        height: 250px;
     }
 
     .title-1 {
-        width: 376px;
+        width: 300px;
         font-size: 32px;
     }
 
     h2 {
         width: 379px;
         font-size: 24px;
+        text-align: center;
     }
 
     p {
         width: 378px;
+        text-align: center;
     }
-
-
 
     footer {
-        /* width: 428px;
         height: 140px;
-        padding: 44px 134px 51px 133px; */
-
-
-        /* display: flex;
-        width: 100vw;
-        height: 134px;
-        padding: 35px 0px 36px 0px;
-        justify-content: center;
-        align-items: center;
+        padding: 44px 134px 51px 133px;
+        background-image: url(/assets/svgexport-15\ 1.svg) width: 162px;
+        height: 45px;
         flex-shrink: 0;
-        background: #23272A; */
     }
-
-
 }
